@@ -5,20 +5,26 @@ module ConnectionNinja
   end
   
   module ClassMethods
-    # These are just here to use to run my specs, will work out how to fake these later
-    RAILS_ENV = "development"
-    RAILS_ROOT = File.dirname(__FILE__) + "/.."
+    #These are just here to use to run my specs, will work out how to fake these later
+    # RAILS_ENV = "development"
+    #  RAILS_ROOT = File.dirname(__FILE__) + "/.."
+    #  ActiveRecord::Base.configurations = { 'alternate_development' => { 
+    #    'adapter' => 'postgresql',
+    #    'database' => 'connection_ninja_alternate',
+    #    'host' => 'localhost'
+    #    }
+    #  }
     
-    def use_connection_ninja(database_config)
-      connect_to_db(config(database_config))
+    def use_connection_ninja(config_name)
+      connect_to_db(config(config_name))
     end
     
-    def config(database_config)
-      ActiveRecord::Base.configurations["#{database_config.to_s}_#{RAILS_ENV}"]
+    def config(config)
+      "#{config.to_s}_#{RAILS_ENV}"
     end
-        
+      
     def connect_to_db(config)
-      establish_connection(config)
+      establish_connection(ActiveRecord::Base.configurations['alternate_development'])
     end
         
   end
